# vertex-cover

./: README.md  road-to-vetex.py
SAT/: CMakeLists.txt  sat.cpp
generator/: CMakeLists.txt  find-vectex.py  pipe.cpp  rgen.cpp  shortest-path.cpp
shortest-path/: CMakeLists.txt  shortest-path.cpp
